Bug 946284 - IonMonkey: Don't form unsigned divisions when the result could be fractional. r=nbp